footer white space underneath fixed

--- a/bin/materialize.css
+++ b/bin/materialize.css
@@ -2095,6 +2095,8 @@ footer.page-footer {
   padding-top: 20px;
   background-color: #ee6e73; }
   footer.page-footer .footer-copyright {
+    overflow: hidden;
+    height: 50px;
     line-height: 50px;
     color: rgba(255, 255, 255, 0.8);
     background-color: rgba(51, 51, 51, 0.08); }
